# ecu-test_custom-checks

./: .gitignore  LICENSE  README.md  configPyLint.pylintrc  pyproject.toml
.github/: labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: 1-feature-request.yml  2-chore.yml  config.yml
.github/automation/: check_chore_label.sh
.github/workflows/: close-fork-prs.yml  lint.yml  md-link-check.yml  release-management.yml  release.yml  reuse.yml  sync-labels.yml  update_github_pages.yml
.reuse/: dep5
.workspace/: manifest.xml
UserPyModules/CustomChecks/: CheckPackageAttributes.py  CheckPackageContentAllowed.py  CheckPackageContentForbidden.py  CheckPackageGeneralInformation.py  CheckPackageLocalMapping.py  CheckPackageNamespace.py  CheckPackageVariables.py  CheckProjectAttributes.py  config_template.yaml
UserPyModules/CustomChecks/api/: AbstractCheck.py  (+4 more)
config/license/: allowlist.json  allowlist_schema.json  check_dependencies.py
docs/: .buildinfo  UserPyModules.CustomChecks.api.html  UserPyModules.CustomChecks.helper.html  UserPyModules.CustomChecks.html  UserPyModules.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: UserPyModules.CustomChecks.api.doctree  UserPyModules.CustomChecks.doctree  UserPyModules.CustomChecks.helper.doctree  UserPyModules.doctree  environment.pickle  index.doctree
docs/_sources/: UserPyModules.CustomChecks.api.rst.txt  UserPyModules.CustomChecks.rst.txt
docs/source/: conf.py  index.rst
source/: UserPyModules.CustomChecks.helper.rst  conf.py
(+7 files in other folders)
